// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments<Replies> when there are no replies renders correctly 1`] = `
<View>
  <Text>
    Header with post details
  </Text>
  <View>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Text
        style={
          Object {
            "fontStyle": "italic",
            "marginHorizontal": 5,
            "padding": 10,
          }
        }
      >
        &lt; 
        Voltar aos Comentários
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "rgba(198, 213, 225, 0.75)",
        "marginBottom": 20,
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../app/assets/images/profile-pic-may.jpg",
          }
        }
        style={
          Object {
            "backgroundColor": "rgba(4, 71, 47, 0.75)",
            "borderRadius": 30,
            "height": 60,
            "overflow": "hidden",
            "width": 60,
          }
        }
      />
      <View
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <Title
          text="Maynara F"
        />
        <Text
          style={
            Object {
              "color": "rgb(51, 51, 51)",
              "fontStyle": "italic",
            }
          }
        >
          01/01/2019
        </Text>
      </View>
    </View>
    <View>
      <Title
        small={true}
        text="Meu pai fez o que ela mandou…"
      />
      <Text>
        Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
      </Text>
    </View>
  </View>
  <NoContent
    text="No replies right now, add one!"
  />
</View>
`;

exports[`Comments<Replies> when there are replies renders correctly 1`] = `
<View>
  <Text>
    Header with post details
  </Text>
  <View>
    <TouchableOpacity
      activeOpacity={0.2}
      onPress={[Function]}
    >
      <Text
        style={
          Object {
            "fontStyle": "italic",
            "marginHorizontal": 5,
            "padding": 10,
          }
        }
      >
        &lt; 
        Voltar aos Comentários
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "rgba(198, 213, 225, 0.75)",
        "marginBottom": 20,
        "padding": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../app/assets/images/profile-pic-may.jpg",
          }
        }
        style={
          Object {
            "backgroundColor": "rgba(4, 71, 47, 0.75)",
            "borderRadius": 30,
            "height": 60,
            "overflow": "hidden",
            "width": 60,
          }
        }
      />
      <View
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <Title
          text="Maynara F"
        />
        <Text
          style={
            Object {
              "color": "rgb(51, 51, 51)",
              "fontStyle": "italic",
            }
          }
        >
          01/01/2019
        </Text>
      </View>
    </View>
    <View>
      <Title
        small={true}
        text="Meu pai fez o que ela mandou…"
      />
      <Text>
        Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.
      </Text>
    </View>
  </View>
  <View>
    <Text
      style={
        Object {
          "fontStyle": "italic",
          "fontWeight": "bold",
          "paddingHorizontal": 10,
          "paddingVertical": 5,
        }
      }
    >
      2
       
      respostas
    </Text>
    <FlatList
      data={
        Array [
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/profile-pic-annon.png",
              },
              "name": "Kelli S",
            },
            "body": "Meu pai também fez o mesmo. Logo depois que minha mãe pediu o divórcio porque sofria violência dentro de casa, ele pegou as malas, se mudou e sumiu no mundo. Nem faço mais questão de saber pra onde ele foi.",
            "dateCreated": 2019-01-02T00:00:00.000Z,
            "id": "21098",
          },
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/profile-pic-annon.png",
              },
              "name": "Kelli S",
            },
            "body": "Nem faço mais questão de saber pra onde ele foi.",
            "dateCreated": 2019-01-03T00:00:00.000Z,
            "id": "21099",
          },
        ]
      }
      disableVirtualization={false}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    />
  </View>
</View>
`;
